[gd_scene load_steps=3 format=3 uid="uid://ck54gpx76tecr"]

[ext_resource type="Script" path="res://ui/register_form/register_form.gd" id="1_8nq2r"]
[ext_resource type="PackedScene" uid="uid://dgtfkq31ugw5c" path="res://resources/art/sprite_texture_map.tscn" id="2_6ub8e"]

[node name="RegisterForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8nq2r")

[node name="CharacterPreview" type="Control" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" parent="CharacterPreview" instance=ExtResource("2_6ub8e")]
texture_filter = 1
scale = Vector2(10, 10)
region_rect = Rect2(32, 0, 8, 8)

[node name="Username" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true
secret_character = "*"

[node name="ConfirmPassword" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Confirm password"
virtual_keyboard_type = 6
secret = true
secret_character = "*"

[node name="SpriteOptionButton" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 10
popup/item_0/text = "Peasant"
popup/item_0/id = 0
popup/item_1/text = "Adventurer"
popup/item_1/id = 1
popup/item_2/text = "Noble"
popup/item_2/id = 2
popup/item_3/text = "Barbarian"
popup/item_3/id = 3
popup/item_4/text = "Psychic"
popup/item_4/id = 4
popup/item_5/text = "Reverent"
popup/item_5/id = 5
popup/item_6/text = "Undead"
popup/item_6/id = 6
popup/item_7/text = "Giant"
popup/item_7/id = 7
popup/item_8/text = "Seafarer"
popup/item_8/id = 8
popup/item_9/text = "Raider"
popup/item_9/id = 9

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="ConfirmButton" type="Button" parent="ButtonsHBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="ButtonsHBoxContainer"]
layout_mode = 2
text = "Cancel"
